--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3",
+    "styled-icons": "^10.45.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
