--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "proj3",
   "version": "0.1.0",
-  "homepage": "https://shao-you.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.18.6",
+    "antd": "^4.18.7",
     "axios": "^0.25.0",
     "immutable": "^4.0.0",
     "react": "^17.0.2",
@@ -27,9 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
