--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "proj3",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shao-you.github.io",
   "dependencies": {
+    "@docusaurus/react-loadable": "^5.5.2",
+    "@loadable/component": "^5.15.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -23,6 +27,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
